# libpam-gooroom-authenticator

./: Makefile.am  README  autogen.sh  configure.ac
debian/: changelog  control  copyright  postinst  rules
po/: LINGUAS  POTFILES.in  en_US.gmo  en_US.po  ko.gmo  ko.po
src/: Makefile.am  cleanup.c  cleanup.h  common.c  common.h  custom-hash-helper.h  ecryptfs-rewrap-passphrase-helper.c  ecryptfs-wrap-passphrase-file-helper.c  ecryptfs-wrap-passphrase-helper.c  grm-auth-check-helper.c  jwt.c  jwt.h  nfc-auth.c  nfc-auth.h  nfc_auth.c  nfc_auth.h  pam-common.c  pam-common.h  pam-mount-template.h  pam.c  pam_mount_template.h  pwquality-conf-template.h
